css/style.css
html {
    scroll-behavior: smooth;
    overflow: hidden; /* Removes the scrollbar, creating the single page look */
  }
body {
    background-color: #070A3B;
    font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
    color: #fff;
}

.bg-base {
    height: 100%;
    height: 100vh;
    background: linear-gradient(135deg, #090E42, #080C3F, #070A3B, #060838, #050635, #040432);
    animation: xd 10s ease;
    position: relative;
    overflow: hidden;

}

.bg-base-content {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    user-select: none;
}

#particles-container {
    position: absolute;
    width: 100%;
    height: 100%;
    padding: 0;
    margin: 0;
    z-index: 0;
}

/* Custom CSS for box dropdown */
.navbar-menu {
  display: none;
  position: absolute;
  right: 2rem; /* Increase spacing on the right */
  top: calc(100% + 0.5rem);
  z-index: 20;
  background-color: transparent; /* Set background color */
  border: 1px solid #454aa6; /* Set border */
  border-radius: 1.5rem; /* Add border radius */
  min-width: 200px; /* Set minimum width */
}
.navbar-item {
    border-radius: .55rem; /* Add border radius to navbar items */
}
.navbar-item::after {
content: ''; /* Add content to the pseudo-element */
position: absolute; /* Set position absolute */
bottom: -2px; /* Position the line below the navbar item */
left: 5%; /* Align the line with the navbar item */
width: 0%; /* Set width to auto to match text width */
height: 2px; /* Set height of the line */
background-color: #454aa6; /* Set color of the line */
transition: width 0.3s ease; /* Add transition effect */
}
.navbar-item:hover::after {
width: 90%; /* Expand the width of the line on hover */
}
.navbar-item:hover {
    background-color: transparent; /* Change background color of navbar items on hover */
    opacity: .5
}
.navbar-burger {
    margin-right: 0.75rem;
}
.navbar-item.has-dropdown.is-active .navbar-menu {
    display: block;
}
.navbar-item.has-dropdown.is-active .navbar-link {
    background-color: transparent; /* Remove background color from active dropdown */
}
.navbar-dropdown {
    border: none; /* Remove border from dropdown items */
    padding: 0.5rem; /* Add padding */
}
.navbar-item.has-dropdown.is-active .navbar-dropdown {
    display: block; /* Show dropdown on active */
}

.lead {
    text-align: center;
 }

 .lead > a {
   margin-bottom: 0.5em;
 }

.box-img {
    border-top-left-radius: 0; /* Keep top-left corner square */
    border-top-right-radius: 0; /* Keep top-right corner square */
    border-bottom-left-radius: 50%; /* Bottom-left corner becomes circular */
    border-bottom-right-radius: 50%; /* Bottom-right corner becomes circular */
    width: 10rem;
    height: 10rem;
    margin-bottom: 1rem;
    overflow: hidden; /* Hide the overflowing content */
}

@keyframes xd {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}
/*
.scroll-down i {
    color: white;
  }
.vert-move2 {
    -webkit-animation: mover 0.5s infinite alternate;
    animation: mover 0.5s infinite alternate;
}
*/

@keyframes mover {
    0% {
        transform: translateY(0);
    }
    100% {
        transform: translateY(-10px);
    }
}

@-webkit-keyframes mover /* Safari and Chrome */ {
    0% {
        transform: translateY(0);
    }
    100% {
        transform: translateY(-10px);
    }
}

/*
    https://coolors.co/5865f2-5e68f2-646af2-6f6ef1-8677ef-b388eb-ea80fc
*/
/* Original Theme */
/*
background: linear-gradient(135deg, #0c007d, #552bb9, #9d55f5);
*/
/* Ocean Breeze */
/*
background: linear-gradient(135deg, #82D8D8, #65C8C8, #49B7B7, #2CA5A5, #198E8E, #008080);
*/
/* Midnight Blue */
/*
background: linear-gradient(135deg, #090E42, #080C3F, #070A3B, #060838, #050635, #040432);
*/
/* Light theme */
/*
background: linear-gradient(135deg, #5865F2, #5E68F2, #646AF2, #6F6EF1, #8677EF, #8677EF, #EA80FC);
*/
/* Dark theme */
/*
background: linear-gradient(135deg, #000033, #330066, #660099, #9900CC, #CC00FF, #FF33FF);
*/

